[metadata]
name = virtenv
version = 0.1.0
description = Create a virtual environment with venv or virtualenv 
url = https://github.com/sarugaku/virtenv
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    venv
    virtualenv
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = false
python_requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3
install_requires =
    pythonfinder
    virtualenv
py_modules =
    virtenv
    virtenv_cli

[options.entry_points]
console_scripts =
    virtenv = virtenv_cli:main

[bdist_wheel]
universal = 1
